# ml-covid-nowcasting

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: .gitignore  hu-berlin.ovpn.secret  update.yaml
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
Detection model (logistic regression)/: .env  Add_variant_data.ipynb  Adjust_for_class_imbalance.ipynb  Detection model (Logistic regression).ipynb  Detection_model.ipynb  Inzidenz_Impfstatus.xlsx  analysis_plots.py  load_data.py  postgres_credentials.yaml.secret
model/: .env  Adjust_for_class_imbalance.ipynb  Detection_model.ipynb  Incidence_nowcast.ipynb  Investigate_data_availability.ipynb  Inzidenz_Impfstatus.xlsx  automl_classification.ipynb  load_data.py  log_reg_model.py  postgres_credentials.yaml.secret  reported_incidence.ipynb
