[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["Jakob J. Kolb <kolb@hardfork.io>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
ipykernel = "^6.4.2"
psycopg2-binary = "^2.9.1"
matplotlib = "^3.4.3"
sklearn = "^0.0"
numpy = "^1.19.5"
ramda = "^0.6.4"
joblib = "^1.1.0"
openpyxl = "^3.0.9"
nbconvert = "^6.4.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
